--- a/GenerateQRCode/GenerateQRCode/GenerateQRCode.csproj
+++ b/GenerateQRCode/GenerateQRCode/GenerateQRCode.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="QrCode.Net" Version="0.4.0" />
+    <PackageReference Include="QRCoderNetCore" Version="1.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
